# dbfs-spark-cache

./: .gitignore  .pre-commit-config.yaml  CACHE_PERFORMANCE_ANALYSIS.md  Changelog.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  serverless_env.yml
.github/workflows/: release.yml  validate.yml
dbfs_spark_cache/: __init__.py  cache_management.py  caching.py  config.py  core_caching.py  dataframe_extensions.py  hashing.py  query_complexity_estimation.py  utils.py
scripts/: check_licenses.py  clear_old_caches.py  run_integration_test.sh
tests/: __init__.py  conftest.py  mocks_databricks.py  notebook_utils.py  test_core_caching.py  test_create_cached_dataframe.py  test_dataframe_extensions.py  test_dataframe_extensions_isolated.py  test_dataframe_extensions_top.py  test_dbfs_spark_cache.py  test_get_table_hash.py  test_hashing.py  test_query_plan_hash_stability.py  test_utils.py
tests/notebooks/: integration_test_notebook.py  profiling.py
